--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
